@@ -1,5 +1,6 @@
 2011-06-21  Xavier Perseguers  <xavier@causal.ch>
 
+	* [TASK][!!!] #27570: Breaking change in web service 2.0
 	* [TASK][!!!] #27570: Update web service end-point
 
 2011-06-20  Xavier Perseguers  <xavier@causal.ch>
